# gmbp

./: README.md  pyproject.toml  test_add_chain.py  test_api.py  test_api_rename.py
src/gmbp/: __init__.py  api.py
src/gmbp/canvas/: server.py
src/gmbp/canvas/static/: index.html
src/gmbp/core/: distributions.py  messages.py  topology.py
src/gmbp/inference/: bp.py  em.py
src/gmbp/session/: fluent.py  workspace.py
